--- a/css/_front-page.scss
+++ b/css/_front-page.scss
@@ -1,10 +1,41 @@
-$max-width : 1020px;
 
-.centered-section {
-	max-width: $max-width;
-	margin:0 auto;
+
+/*
+	Hero Section
+*/
+.hero-content {
+	@extend .centered-section;
+	@extend .debug;
+	height: 400px;
 }
 
-.latest_posts {
+/*
+	Latest Posts
+*/
+
+.latest-posts {
 	@extend .centered-section;
+	@extend .debug;
+	
+}
+
+.article-preview {
+	// @include box-shadow(0px, 2px, 1px, 1px, rgba(0,0,0,0.25));
+	@extend .debug;
+	margin: 15px 20px;
+}
+
+/* 
+	About Us
+*/
+
+.about-us {
+	@extend .centered-section;
+	@extend .debug;
+}
+
+.social-media {
+	@extend .centered-section;
+	@extend .debug;
+	height: 100px;
 }
