--- a/css/style.scss
+++ b/css/style.scss
@@ -33,4 +33,30 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 */
 
+/* 
+	Mixins used through out
+*/
+
+@mixin box-shadow($x-offset, $y-offest, $blur-radius, $spread-radius, $color) {
+	-webkit-box-shadow: $x-offset $y-offest $blur-radius $spread-radius $color;
+	-moz-box-shadow: $x-offset $y-offest $blur-radius $spread-radius $color;
+	box-shadow: $x-offset $y-offest $blur-radius $spread-radius $color;
+}
+
+$max-section-width : 1020px;
+
+.centered-section {
+	max-width: $max-section-width;
+	margin:0 auto;
+}
+
+// Used For Seeing formatting
+.debug {
+	border: 1px solid black;
+}
+
+@import 'header';
 @import 'front-page';
+
+
+
