--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,3 +3,29 @@
 	@extend .debug;
 	height: 75px;
 }
+
+.navbar-logo {
+	float: left;
+	margin: 15px 20px;
+}
+
+.navbar-items {
+	float: right;
+	margin-right: 20px;
+}
+
+.navbar-mobile {
+	display: none;
+}
+
+// Show Mobile Navbar instead of Full Navbar
+
+@media (max-device-width: $small-screen) {
+	.navbar {
+		display: none;
+	}
+
+	.navbar-mobile {
+		display: block;
+	}
+}
