--- a/css/_front-page.scss
+++ b/css/_front-page.scss
@@ -7,6 +7,7 @@
 	@extend .centered-section;
 	@extend .debug;
 	height: 400px;
+	clear: both;
 }
 
 /*
@@ -23,6 +24,23 @@
 	// @include box-shadow(0px, 2px, 1px, 1px, rgba(0,0,0,0.25));
 	@extend .debug;
 	margin: 15px 20px;
+}
+
+.article-preview-image {
+	height: 150px;
+}
+
+.article-preview-content {
+	padding:5px 15px;
+	background-color: $post-preview-bg-color;
+}
+
+.article-preview-title {
+
+}
+
+.article-preview-text {
+	font-size: 0.9em;
 }
 
 /* 
