--- a/css/_common.scss
+++ b/css/_common.scss
@@ -4,12 +4,13 @@
 
 $bg-color : #252525;
 $post-preview-bg-color : #4C0808;
+$link-highlight-color: #C1A3F2;
 
 /*
 	Size Definitions
 */
 
-$small-screen : 26em; 
+$small-screen : 555px; 
 
 /* 
 	Mixins used through out
