--- a/css/_common.scss
+++ b/css/_common.scss
@@ -6,6 +6,8 @@ $bg-color : #252525;
 $post-preview-bg-color : #4C0808;
 $link-highlight-color: #C1A3F2;
 
+$highlight-purple: #4D0090;
+
 /*
 	Size Definitions
 */
