--- a/css/_front-page.scss
+++ b/css/_front-page.scss
@@ -6,8 +6,22 @@
 .hero-content {
 	@extend .centered-section;
 	@extend .debug;
+	position: relative;
 	height: 400px;
 	clear: both;
+}
+
+.hero-caption {
+	display: inline-block;
+	position: absolute;
+	bottom: 50px;
+	left: 25px;
+	padding: 2px 15px;
+	background-color: $highlight-purple;
+	max-width: 400px;
+
+	font-size: 20px;
+	text-transform: uppercase;
 }
 
 /*
@@ -24,15 +38,18 @@
 	// @include box-shadow(0px, 2px, 1px, 1px, rgba(0,0,0,0.25));
 	@extend .debug;
 	margin: 15px 20px;
+	height: 350px;
+	background-color: $post-preview-bg-color;
 }
 
 .article-preview-image {
-	height: 150px;
+	max-height: 150px;
+	overflow: hidden;
 }
 
 .article-preview-content {
 	padding:5px 15px;
-	background-color: $post-preview-bg-color;
+	
 }
 
 .article-preview-title {
