Added fixed navbar on desktop layout

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,12 +1,25 @@
 // Common Stylings
 .navbar {
 	@extend .centered-section;
-	@extend .debug;
+	background-color: $bg-color;
+	border-bottom: 1px solid #6A6A6C;
 	height: 75px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+
+	z-index: 1;
 }
 
 .navbar-mobile {
 	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 
 // Full Navbar Styling
