--- a/css/_front-page.scss
+++ b/css/_front-page.scss
@@ -5,7 +5,6 @@
 */
 .hero-content {
 	@extend .centered-section;
-	@extend .debug;
 	position: relative;
 	height: 500px;
 	overflow: hidden;
@@ -22,7 +21,7 @@
 	position: absolute;
 	bottom: 50px;
 	left: 25px;
-	padding: 2px 15px;
+	padding: 0px 30px;
 	background-color: $highlight-purple;
 	max-width: 400px;
 
@@ -36,13 +35,11 @@
 
 .latest-posts {
 	@extend .centered-section;
-	@extend .debug;
 	padding-top: 20px;
 }
 
 .article-preview {
 	// @include box-shadow(0px, 2px, 1px, 1px, rgba(0,0,0,0.25));
-	@extend .debug;
 	margin: 15px 20px;
 	height: 350px;
 	background-color: $post-preview-bg-color;
@@ -64,6 +61,11 @@
 
 .article-preview-text {
 	font-size: 0.9em;
+}
+
+.more-posts {
+	padding:10px 0px 30px 0px;
+	text-align: center;
 }
 
 /* 
