--- a/css/_header.scss
+++ b/css/_header.scss
@@ -4,10 +4,10 @@
 	background-color: $bg-color;
 	border-bottom: 1px solid #6A6A6C;
 	height: 75px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
+	// position: fixed;
+	// top: 0;
+	// left: 0;
+	// right: 0;
 	margin: auto;
 
 	z-index: 1;
