--- a/css/style.scss
+++ b/css/style.scss
@@ -40,7 +40,7 @@ THE SOFTWARE.
 // Default Page Styling
 
 body {
-	padding-top: 100px;
+	// padding-top: 100px; For "sticky" nav bar
 	background-color: $bg-color;
 }
 
