--- a/css/_header.scss
+++ b/css/_header.scss
@@ -14,12 +14,14 @@
 }
 
 .navbar-mobile {
+	background-color: $bg-color;
 	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	margin: auto;
+	z-index: 1;
 }
 
 // Full Navbar Styling
