Made about our brotherhood section take up the entire width

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -6,7 +6,7 @@ $bg-color : #252525;
 $post-preview-bg-color : #4C0808;
 $link-highlight-color: #C1A3F2;
 
-$highlight-purple: #4D0090;
+$highlight-purple: #25084C;
 
 /*
 	Size Definitions
