--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,7 +3,7 @@
 	@extend .centered-section;
 	background-color: $bg-color;
 	border-bottom: 1px solid #6A6A6C;
-	height: 75px;
+	height: 120px;
 	// position: fixed;
 	// top: 0;
 	// left: 0;
@@ -36,6 +36,7 @@
 	.navbar-items {
 		float: right;
 		margin-right: 20px;
+		margin-top: 25px;
 	}
 }
 
